# kubeflow-pipeline-uv

./: README.md  component.py  pipeline.py  pyproject.toml
components/: __init__.py  download_data.py  plotting.py  training.py
